--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -22,7 +22,7 @@
           <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
           <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
 
-          <!-- Modal -->
+          <!-- Modal
           <div id="modal-{{ category.id }}" class="modal">
             <div class="modal-content">
                 <h4>Are you sure you want to delete this category?</h4>
@@ -31,7 +31,7 @@
             <div class="modal-footer">
                 <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
                 <a href="modal-close" class="btn green accent-4">Cancel</a>
-            </div>
+            </div> -->
           </div>
         </div>
        </div>
